--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -3,7 +3,8 @@
   "short_name": "OkC Alt",
   "version": "2.9.5",
   "manifest_version": 2,
-  "description": "Are you using OkCupid? You should definitely be using this extension.",
+  "description":
+    "Are you using OkCupid? You should definitely be using this extension.",
   "homepage_url": "http://benjaffe.me/projects/date/",
   "page_action": {
     "default_icon": {
@@ -26,10 +27,7 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "http://*.okcupid.com/*",
-        "https://*.okcupid.com/*"
-      ],
+      "matches": ["http://*.okcupid.com/*", "https://*.okcupid.com/*"],
       "css": [
         "bower_components/jquery-ui/themes/ui-lightness/jquery-ui.min.css",
         "style.css"
